2004-10-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/version.h.in: 2.9.0 -> 2.9.0 post

2004-10-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* 2.9.0 released.
	  (tag "rel-2_9_0)

	* configure.in, mlterm.spec, xwindow/version.h.in, doc/en/ReleaseNote:
	  updated.

2004-10-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_window.h (x_window_t):
	  added following dummy members to keep the size of x_winodw_t.
	  - void *  xft_draw; (used if USE_TYPE_XFT is undefined)
	  - void *  dnd; (used if DISABLE_DND is defined)
	  - void *  set_xdnd_config; (used if DISABLE_DND is defined)

	* inputmethod/uim/Makefile.in:
	* inputmethod/iiimf/Makefile.in:
	* inputmethod/m17nlib/Makefile.in:
	* inputmethod/kbd/Makefile.in:
	  removed AA_CFLAGS and DND_CFLAGS.

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* README: fixed typo. (for X -> on X)

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlclient.1: AUTHOR -> CONTACT

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1, man/mlclient.1:
	  - fixed typo. (MLTERM -> MLCLIENT)
	  - changed date. (->2004/10/23)

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* man/mlterm.1: fixed typo. (for X -> on X)

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_term_manager.c (open_pty_intern): set COLORFGBG
	  environment variable to "default;default" (hardcorded).

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/src/kik_pty_streams.c: moved linux specific error message
	  into #ifdef __linux__.

2004-10-23 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/version.h.in: 2.8.0 post -> 2.9.0 pre

2004-10-22 MINAMI Hirokazu <minami@mistfall.net>

        * kiklib/src/kik_net.h: when neither PF_LOCAL nor PF_UNIX was defined, 
	use AF_LOCAL (which may be an alias of AF_UNIX) instead.

2004-10-22 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c:
	  - strlen() -> strlen() + 1
	  - fixed typo in comment.

	* inputmethod/iiimf/im_iiimf.c: strlen_utf16() -> strlen_utf16() + 1
